--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="grid-2">
         <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
+        
+             <img src="c:\Users\COLLEGE STUDENT.DESKTOP-QJGE625\Downloads\IMG_4528.jpg" style="width:400px;height:400px;">
             <h2>Patrick Reyes</h2>
             <p>Cavite, Philippines.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
