--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="grid-2">
         <div class="section-1">
         
-             <img src="c:\Users\COLLEGE STUDENT.DESKTOP-QJGE625\Downloads\IMG_4528.jpg" style="width:400px;height:400px;">
+             <img src="IMG_4528.jpg" style="width:400px;height:400px;">
             <h2>Patrick Reyes</h2>
             <p>Cavite, Philippines.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
